--- a/VPC3/CMakeLists.txt
+++ b/VPC3/CMakeLists.txt
@@ -8,17 +8,15 @@ set(SOURCE_FILES
         src/FCMPredictor.h
         src/LVPredictor.cpp
         src/LVPredictor.h
-        src/main.cpp
-        src/main.h
-        src/Predictor.cpp
         src/Predictor.h
         src/VPC3.cpp
         src/VPC3.h
         src/Configuration.cpp
         src/Configuration.h
         src/InputConfigReader.cpp
-        src/InputConfigReader.h)
+        src/InputConfigReader.h
+        src/DFCMPredictor.cpp
+        src/DFCMPredictor.h)
+
 
 add_executable(VPC3 ${SOURCE_FILES})
-
-target_link_libraries (VPC3 libz.a)
